  your fingers on the home row:
  - A+i, A+k: prev, next line
  - A+j, A+l: prev, next character
  - A+q, A+a: page up, page down
  - A+z, A+x: home, end
  - A+d: delete next character
- File->Recent Directories menu lists directories that were recently
  visted in the file system browser
- A new View->Docking menu; contains commands for closing the left, top,
  right and bottom docking areas

+ Enhancements

- Icon added to 'BeanShell Error' dialog box
- Updated PV-WAVE mode (Ed Stewart)
- Closing a docked window now returns focus to the text area
- Memory indicator tooltip now shows used and total Java heap memory in
  kilobytes
- Updated Transact-SQL mode (Ollie Rutherfurd)
- Updated Omnimark mode (Lionel Fiol)
- Option for search and replace to beep on auto wrap (Kenrick Drew)
- Faster (in theory anyway) file loading as a side effect of some bug
  fixes
- Improved help viewer welcome screen
- Updated QuickNotepad sample plugin for jEdit 4.0 API changes (John
  Gellene)
- 'Delete Line' now leaves the caret in the same column
- '~' in buffer and directory path names is now automatically expanded
  to the home directory
- Improved undo
- File selection dialog boxes now have a status bar that shows the number
  of pending I/O requests
- Middle mouse button click in file system browser now has the same
  effect as double-clicking

+ Bug Fixes

- Fixed a memory leak with the search and replace dialog box
- Undo would be broken after a file was reloaded
- Fixed exception thrown if a buffer contained definitions for integer
  properties (tab size, maximum line length, ...)
- Changing the gutter font didn't update the gutter width
- Fixed broken scrolling behavior
- Some files would open with only one line visible
- MiscUtilities.compareStrings() would throw exceptions with strings
  that contained embedded numbers larger than 2^31
- Creating a new view or splitting the view didn't work
- Tool bar tooltips were broken